# dinghy.markata.com

./: .gitignore  dinghy.yaml  index.html  pyproject.toml
.github/workflows/: daily-digest.yml
month/: index.html
quarter/: index.html
week/: index.html
